--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "history": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^6.0.0-alpha.2",
+    "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
